compiler/testData/diagnostics/tests/nullableTypes/nullableArgumentForIn.fir.kt
fun test(x: Int?) {
     x <!INAPPLICABLE_CANDIDATE!>in<!> 1..2
}